--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
-        "guzzle/guzzle": "~3.8"
+        "guzzle/guzzle": ">=3.7"
     },
     "autoload": {
         "psr-0" : {
